--- a/specification/applicationinsights/data-plane/microsoft.insights/preview/v1/AppInsights.json
+++ b/specification/applicationinsights/data-plane/microsoft.insights/preview/v1/AppInsights.json
@@ -120,7 +120,7 @@
         ],
         "responses": {
           "200": {
-            "description": "Successful response",
+            "description": "Successful responses",
             "schema": {
               "type": "object"
             }
@@ -302,6 +302,9 @@
           },
           {
             "$ref": "#/parameters/queryTimespan"
+          },
+          {
+            "$ref": "#/parameters/applicationsParam"
           }
         ],
         "responses": {
@@ -328,7 +331,7 @@
       "in": "path",
       "required": true,
       "type": "string",
-      "x-ms-parameter-location": "client"
+      "x-ms-parameter-location": "method"
     },
     "metricId": {
       "name": "metricId",
@@ -399,7 +402,8 @@
           "max",
           "avg",
           "sum",
-          "count"
+          "count",
+          "unique"
         ],
         "x-ms-enum": {
           "name": "MetricsAggregation",
@@ -418,11 +422,11 @@
     "metricsSegment": {
       "name": "segment",
       "in": "query",
-      "collectionFormat": "csv",
       "x-ms-parameter-location": "method",
       "description": "The name of the dimension to segment the metric values by. This dimension must be applicable to the metric you are retrieving. To segment by more than one dimension at a time, separate them with a comma (,). In this case, the metric data will be segmented in the order the dimensions are listed in the parameter.",
       "type": "array",
       "minItems": 1,
+      "collectionFormat": "csv",
       "items": {
         "type": "string",
         "enum": [
@@ -588,6 +592,18 @@
       "description": "An expression used for aggregation over returned events",
       "type": "string"
     },
+    "applicationsParam": {
+      "name": "applications",
+      "in": "query",
+      "required": false,
+      "default": "",
+      "description": "Application IDs to include in cross-application queries.",
+      "type": "array",
+      "collectionFormat": "csv",
+      "items": {
+        "type": "string"
+      }
+    },
     "queryTimespan": {
       "name": "timespan",
       "in": "query",
@@ -673,7 +689,8 @@
           "max",
           "avg",
           "sum",
-          "count"
+          "count",
+          "unique"
         ],
         "x-ms-enum": {
           "name": "MetricsAggregation",
@@ -690,6 +707,7 @@
       "description": "The name of the dimension to segment the metric values by. This dimension must be applicable to the metric you are retrieving. To segment by more than one dimension at a time, separate them with a comma (,). In this case, the metric data will be segmented in the order the dimensions are listed in the parameter.",
       "type": "array",
       "minItems": 1,
+      "collectionFormat": "csv",
       "items": {
         "type": "string",
         "enum": [
@@ -1794,6 +1812,14 @@
     "queryTimespan": {
       "description": "Optional. The timespan over which to query data. This is an ISO8601 time period value.  This timespan is applied in addition to any that are specified in the query expression.",
       "type": "string"
+    },
+    "applicationsParam": {
+      "description": "Application IDs to include in cross-application queries.",
+      "type": "array",
+      "collectionFormat": "csv",
+      "items": {
+        "type": "string"
+      }
     },
     "queryBody": {
       "description": "The Analytics query. Learn more about the [Analytics query syntax](https://azure.microsoft.com/documentation/articles/app-insights-analytics-reference/)",
