Bugfixes, cleanup generation

--- a/specification/applicationinsights/data-plane/microsoft.insights/preview/v1/AppInsights.json
+++ b/specification/applicationinsights/data-plane/microsoft.insights/preview/v1/AppInsights.json
@@ -390,6 +390,7 @@
     "metricsAggregation": {
       "name": "aggregation",
       "in": "query",
+      "collectionFormat": "csv",
       "x-ms-parameter-location": "method",
       "description": "The aggregation to use when computing the metric values. To retrieve more than one aggregation at a time, separate them with a comma. If no aggregation is specified, then the default aggregation for the metric is used.",
       "type": "array",
@@ -421,6 +422,7 @@
     "metricsSegment": {
       "name": "segment",
       "in": "query",
+      "collectionFormat": "csv",
       "x-ms-parameter-location": "method",
       "description": "The name of the dimension to segment the metric values by. This dimension must be applicable to the metric you are retrieving. To segment by more than one dimension at a time, separate them with a comma (,). In this case, the metric data will be segmented in the order the dimensions are listed in the parameter.",
       "type": "array",
