--- a/specification/applicationinsights/data-plane/microsoft.insights/preview/v1/AppInsights.json
+++ b/specification/applicationinsights/data-plane/microsoft.insights/preview/v1/AppInsights.json
@@ -595,6 +595,7 @@
     "applicationsParam": {
       "name": "applications",
       "in": "query",
+      "collectionFormat": "csv",
       "required": false,
       "default": "",
       "description": "Application IDs to include in cross-application queries.",
